--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,55 @@ on:
     branches: [ main ]
 
 jobs:
-  cicd:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2
+
+      - name: Build
+        run: |
+          chmod a+x ./gradlew
+          ./gradlew build
+
+  tag:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Read upimage version
+        run: |
+          chmod a+x ./gradlew
+          echo "UPIMAGE_VERSION=$(./gradlew properties | grep -e ^version | grep -e \\d\.\\d\.\\d\* -o)" >> $GITHUB_ENV
+
+      - name: Read latest tag
+        run: echo "TAG=$(git tag -l v${{ env.UPIMAGE_VERSION }})" >> $GITHUB_ENV
+
+      - name: Verify version
+        if: ${{ env.TAG != '' }}
+        run: exit 1
+
+      - name: Create release with tag
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ env.UPIMAGE_VERSION }}
+          release_name: v${{ env.UPIMAGE_VERSION }}
+
+      - name: Set upload url
+        run: echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
+
+  publish-native-linux:
+    needs: tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Install GraalVM
         run: |
@@ -19,18 +62,72 @@ jobs:
           sdk install java 21.2.0.r11-grl
           gu install native-image
 
+      - name: Packpage native
+        run: |
+          chmod a+x ./gradlew
+          ./gradlew nativeBuild
+          mv $PWD/build/native/nativeBuild/upimage upimage
+          zip upimage-linux-${{ env.UPIMAGE_VERSION }}.zip upimage
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./upimage-linux-${{ env.UPIMAGE_VERSION }}.zip
+          asset_name: upimage-linux
+          asset_content_type: application/zip
+
+  publish-native-osx:
+    needs: tag
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install GraalVM
+        run: |
+          curl -s "https://get.sdkman.io" | bash
+          source "$HOME/.sdkman/bin/sdkman-init.sh"
+          sdk install java 21.2.0.r11-grl
+          gu install native-image
+
+      - name: Packpage native
+        run: |
+          chmod a+x ./gradlew
+          ./gradlew nativeBuild
+          mv $PWD/build/native/nativeBuild/upimage upimage
+          zip upimage-osx-${{ env.UPIMAGE_VERSION }}.zip upimage
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./upimage-osx-${{ env.UPIMAGE_VERSION }}.zip
+          asset_name: upimage-osx
+          asset_content_type: application/zip
+
+  publish-jar:
+    needs: tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Build
         run: |
           chmod a+x ./gradlew
           ./gradlew build
 
-      - name: Packpage native
-        run: ./gradlew nativeBuild
-
-      - name: Publish native app
-        run: |
-          git clone https://github.com/clarkwang/passh.git
-          gcc ./passh/passh.c -o passhe
-          curl --location --request POST '${{ secrets.HOST }}/actuator/shutdown'
-          ./passhe -p '${{ secrets.ACCESS_TOKEN }}' scp -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no  $PWD/build/native/nativeBuild/upimage ${{ secrets.TARGET_HOME }}
-          ./passhe -p '${{ secrets.ACCESS_TOKEN }}' ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no ${{ secrets.TARGET }} "source .bashrc; ./upimage > upimage.log &"
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./build/libs/upimage-${{ env.UPIMAGE_VERSION }}.jar
+          asset_name: upimage-${{ env.UPIMAGE_VERSION }}.jar
+          asset_content_type: application/zip
