--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - run: echo "version 1.0.13" | grep -e \\d\.\\d\.\\d\* -o
+
       - name: Build
         run: |
           chmod a+x ./gradlew
-          ./gradlew build
+          ./gradlew test
 
   tag:
     needs: build
