--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: echo "version 1.0.13" | grep -e \\d\.\\d\.\\d\* -o
-
       - name: Build
         run: |
           chmod a+x ./gradlew
@@ -31,8 +29,8 @@ jobs:
           chmod a+x ./gradlew
           ./gradlew properties
           ./gradlew properties | grep -e ^version
-          ./gradlew properties | grep -e ^version | grep -e \\d\.\\d\.\\d\* -o
-          echo "UPIMAGE_VERSION=$(./gradlew properties | grep -e ^version | grep -e \\d\.\\d\.\\d\* -o)" >> $GITHUB_ENV
+          ./gradlew properties | grep -e ^version | grep -Po \\d\.\\d\.\\d\*
+          echo "UPIMAGE_VERSION=$(./gradlew properties | grep -e ^version | grep -Po \\d\.\\d\.\\d\*)" >> $GITHUB_ENV
 
       - name: Read latest tag
         run: echo "TAG=$(git tag -l v${{ env.UPIMAGE_VERSION }})" >> $GITHUB_ENV
