--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,15 +67,15 @@ jobs:
           chmod a+x ./gradlew
           ./gradlew nativeBuild
           mv $PWD/build/native/nativeBuild/upimage upimage
-          zip upimage-linux-${{ env.UPIMAGE_VERSION }}.zip upimage
+          zip upimage-linux-${{ job.tag.env.UPIMAGE_VERSION }}.zip upimage
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ env.UPLOAD_URL }}
-          asset_path: ./upimage-linux-${{ env.UPIMAGE_VERSION }}.zip
+          upload_url: ${{ job.tag.env.UPLOAD_URL }}
+          asset_path: ./upimage-linux-${{ job.tag.env.UPIMAGE_VERSION }}.zip
           asset_name: upimage-linux
           asset_content_type: application/zip
 
@@ -98,15 +98,15 @@ jobs:
           chmod a+x ./gradlew
           ./gradlew nativeBuild
           mv $PWD/build/native/nativeBuild/upimage upimage
-          zip upimage-osx-${{ env.UPIMAGE_VERSION }}.zip upimage
+          zip upimage-osx-${{ job.tag.env.UPIMAGE_VERSION }}.zip upimage
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ env.UPLOAD_URL }}
-          asset_path: ./upimage-osx-${{ env.UPIMAGE_VERSION }}.zip
+          upload_url: ${{ job.tag.env.UPLOAD_URL }}
+          asset_path: ./upimage-osx-${{ job.tag.env.UPIMAGE_VERSION }}.zip
           asset_name: upimage-osx
           asset_content_type: application/zip
 
@@ -127,7 +127,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ env.UPLOAD_URL }}
-          asset_path: ./build/libs/upimage-${{ env.UPIMAGE_VERSION }}.jar
-          asset_name: upimage-${{ env.UPIMAGE_VERSION }}.jar
+          upload_url: ${{ job.tag.env.UPLOAD_URL }}
+          asset_path: ./build/libs/upimage-${{ job.tag.env.UPIMAGE_VERSION }}.jar
+          asset_name: upimage-${{ job.tag.env.UPIMAGE_VERSION }}.jar
           asset_content_type: application/zip
