--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,9 @@ jobs:
           release_name: v${{ env.UPIMAGE_VERSION }}
 
       - name: Set upload url
-        run: echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
+        run: |
+          echo "upload_url: ${{ steps.create_release.outputs.upload_url }}"
+          echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
 
   publish-native-linux:
     needs: tag
@@ -54,6 +56,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Read upimage version
+        run: |
+          chmod a+x ./gradlew
+          echo "UPIMAGE_VERSION=$(./gradlew properties | grep -e ^version | grep -Po \\d\.\\d\.\\d\*)" >> $GITHUB_ENV
 
       - name: Install GraalVM
         run: |
@@ -67,15 +74,15 @@ jobs:
           chmod a+x ./gradlew
           ./gradlew nativeBuild
           mv $PWD/build/native/nativeBuild/upimage upimage
-          zip upimage-linux-${{ job.tag.env.UPIMAGE_VERSION }}.zip upimage
+          zip upimage-linux-${{ env.UPIMAGE_VERSION }}.zip upimage
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ job.tag.env.UPLOAD_URL }}
-          asset_path: ./upimage-linux-${{ job.tag.env.UPIMAGE_VERSION }}.zip
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./upimage-linux-${{ env.UPIMAGE_VERSION }}.zip
           asset_name: upimage-linux
           asset_content_type: application/zip
 
@@ -98,15 +105,15 @@ jobs:
           chmod a+x ./gradlew
           ./gradlew nativeBuild
           mv $PWD/build/native/nativeBuild/upimage upimage
-          zip upimage-osx-${{ job.tag.env.UPIMAGE_VERSION }}.zip upimage
+          zip upimage-osx-${{ env.UPIMAGE_VERSION }}.zip upimage
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ job.tag.env.UPLOAD_URL }}
-          asset_path: ./upimage-osx-${{ job.tag.env.UPIMAGE_VERSION }}.zip
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./upimage-osx-${{ env.UPIMAGE_VERSION }}.zip
           asset_name: upimage-osx
           asset_content_type: application/zip
 
@@ -127,7 +134,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ job.tag.env.UPLOAD_URL }}
-          asset_path: ./build/libs/upimage-${{ job.tag.env.UPIMAGE_VERSION }}.jar
-          asset_name: upimage-${{ job.tag.env.UPIMAGE_VERSION }}.jar
+          upload_url: ${{ env.UPLOAD_URL }}
+          asset_path: ./build/libs/upimage-${{ env.UPIMAGE_VERSION }}.jar
+          asset_name: upimage-${{ env.UPIMAGE_VERSION }}.jar
           asset_content_type: application/zip
