Fix silly mistake

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
 
       - name: Set upload url into env
         run: |
-          echo upload_url.txt
-          echo upload_url.txt >> $GITHUB_ENV
+          cat upload_url.txt
+          echo "UPLOAD_URL=$(cat upload_url.txt)" >> $GITHUB_ENV
 
       - name: Read upimage version
         run: |
@@ -114,8 +114,8 @@ jobs:
 
       - name: Set upload url into env
         run: |
-          echo upload_url.txt
-          echo upload_url.txt >> $GITHUB_ENV
+          cat upload_url.txt
+          echo "UPLOAD_URL=$(cat upload_url.txt)" >> $GITHUB_ENV
 
       - name: Read upimage version
         run: |
@@ -160,8 +160,8 @@ jobs:
 
       - name: Set upload url into env
         run: |
-          echo upload_url.txt
-          echo upload_url.txt >> $GITHUB_ENV
+          cat upload_url.txt
+          echo "UPLOAD_URL=$(cat upload_url.txt)" >> $GITHUB_ENV
 
       - name: Read upimage version
         run: |
