--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,21 @@ jobs:
           name: upload_url
           path: upload_url.txt
 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Bump up docker image version
+        run: |
+          npm install -g js-yaml
+          node .github/scripts/bump-version-yaml.js docker-compose.yml ${{ env.UPIMAGE_VERSION }}
+          git add docker-compose.yml
+          git config user.name "awesome"
+          git config user.email "awesome@github.com"
+          git commit -m "Bump image version: devecor/upimage:${{ env.UPIMAGE_VERSION }}"
+          git push
+
   publish-native-linux:
     needs: tag
     runs-on: ubuntu-latest
@@ -205,3 +220,46 @@ jobs:
           docker push devecor/upimage:latest
           docker push devecor/upimage:${{ env.UPIMAGE_VERSION }}
           docker logout
+
+  deploy:
+    needs: publish-docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: 'main'
+
+      - name: Install ssh-key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_ed25519
+          ssh-keyscan "${{ secrets.TARGET_SERVER }}" >> ~/.ssh/known_hosts
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Update docker-compose file
+        run: |
+          npm install -g js-yaml
+          node .github/scripts/update-compose-yaml.js docker-compose.yml services.upimage.environment.upimage_host=${{ secrets.HOST }}
+          cp docker-compose.yml docker-compose@next.yml
+          rsync -v docker-compose@next.yml ${{ secrets.USER }}@${{ secrets.TARGET_SERVER }}:~/upimage-compose/
+
+      - name: Service up
+        run: |
+          ssh ${{ secrets.USER }}@${{ secrets.TARGET_SERVER }} "
+            cd upimage-compose;
+            docker compose down;
+            mv docker-compose@next.yml docker-compose.yml;
+            docker compose up -d;
+            docker logout;
+          "
+
+      - name: Delete ssh-key
+        run: rm ~/.ssh/id_ed25519
