--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,7 +247,7 @@ jobs:
       - name: Update docker-compose file
         run: |
           npm install js-yaml
-          node .github/scripts/update-compose-yaml.js docker-compose.yml services.upimage.environment.upimage_host=${{ secrets.HOST }}
+          node .github/scripts/update-compose-yaml.js docker-compose.yml services.upimage.environment.upimage_host=${{ secrets.UPIMAGE_HOST }}
           cp docker-compose.yml docker-compose@next.yml
           rsync -v docker-compose@next.yml ${{ secrets.USER }}@${{ secrets.TARGET_SERVER }}:~/upimage-compose/
 
