--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Build
         run: |
           chmod a+x ./gradlew
-          ./gradlew test
+          ./gradlew build
 
   tag:
     needs: build
