--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: jacoco_test_report
-          path: jacoco_test_report.csv
+          path: build/reports/jacoco/test/jacocoTestReport.csv
 
   tag:
     needs: build
@@ -80,7 +80,7 @@ jobs:
         uses: cicirello/jacoco-badge-generator@v2
         with:
           generate-branches-badge: true
-          jacoco-csv-file: jacoco_test_report.csv
+          jacoco-csv-file: jacocoTestReport.csv
 
       - name: Bump up docker image version
         run: |
