--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,16 +37,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-          cache: 'npm'
-
       - name: Read upimage version
         run: |
-          chmod a+x ./gradlew
-          echo "UPIMAGE_VERSION=$(node .github/scripts/read-version.js version.yml)" >> $GITHUB_ENV
+          echo "UPIMAGE_VERSION=$(cat version.txt)" >> $GITHUB_ENV
 
       - name: Read latest tag
         run: echo "TAG=$(git tag -l v${{ env.UPIMAGE_VERSION }})" >> $GITHUB_ENV
@@ -77,7 +70,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'npm'
 
       - name: Get test report
         uses: actions/download-artifact@v2
@@ -125,8 +117,7 @@ jobs:
 
       - name: Read upimage version
         run: |
-          chmod a+x ./gradlew
-          echo "UPIMAGE_VERSION=$(node .github/scripts/read-version.js version.yml)" >> $GITHUB_ENV
+          echo "UPIMAGE_VERSION=$(cat version.txt)" >> $GITHUB_ENV
 
       - name: Build
         run: |
@@ -164,7 +155,7 @@ jobs:
 
       - name: Read upimage version
         run: |
-          echo "UPIMAGE_VERSION=$(node .github/scripts/read-version.js version.yml)" >> $GITHUB_ENV
+          echo "UPIMAGE_VERSION=$(cat version.txt)" >> $GITHUB_ENV
 
       - name: Login docker hub
         run: docker login -u devecor -p ${{ secrets.DOCKER_TOKEN }}
