--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,9 +169,9 @@ jobs:
           docker push devecor/upimage:${{ env.UPIMAGE_VERSION }}
           docker logout
 
-  deploy:
+  release-to-staging:
     needs: publish-docker-image
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, remote]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
